removing jvm tags